# fantasia-cpp-remake

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
cmake_modules/: FindSFML.cmake
lib/: json.hpp
res/: enemies.json
src/: animator.cpp  animator.h  clickable.h  damage_bubble.cpp  damage_bubble.h  enemy.cpp  enemy.h  enemy_generator.cpp  enemy_generator.h  enemy_gui.cpp  enemy_gui.h  enemy_name.h  entity.h  game.cpp  game.h  inventory.cpp  inventory.h  inventory_gui.cpp  inventory_gui.h  main.cpp  money.cpp  money.h  number_formatter.cpp  number_formatter.h  player.cpp  player.h  player_gui.cpp  player_gui.h  player_rank.h  progress_bar.cpp  progress_bar.h  resource_manager.cpp  resource_manager.h  resource_name.h  resources.cpp  resources.h  rounded_rect.cpp  rounded_rect.h  stage.cpp  stage.h  (+5 more)
src/entities/: enemy.cpp  enemy.h  inventory.cpp  inventory.h  player.cpp  player.h  stage.cpp  stage.h
src/entity/: enemy.cpp  enemy.h  player.cpp  player.h  stage.h
src/enum/: game_stage.h
src/enums/: enemy_name.h  player_rank.h  resource_name.h  stage_level_status.h  stage_name.h
src/gameplay/: game.cpp  game.h
src/gui/: animator.cpp  animator.h  progress_bar.cpp  progress_bar.h  resources.cpp  resources.h  rounded_rectangle_shape.cpp  rounded_rectangle_shape.h
src/gui/drawables/: damage_bubble.cpp  damage_bubble.h  enemy_gui.cpp  enemy_gui.h  inventory_gui.cpp  inventory_gui.h  money.cpp  money.h  player_gui.cpp  player_gui.h  static_gui.cpp  static_gui.h
src/gui/drawables/stage/: stage_boss_button.cpp  stage_boss_button.h  stage_enemy_counter.cpp  stage_enemy_counter.h  stage_gui.cpp  stage_gui.h  stage_level.cpp  stage_level.h
src/interfaces/: clickable.h
src/struct/: enemy.cpp  enemy.h
tests/: animator_test.cpp  damage_bubble_test.cpp  enemy_generator_test.cpp  enemy_test.cpp  game_test.cpp  inventory_test.cpp  money_test.cpp  number_formatter_test.cpp  player_test.cpp  resources_test.cpp  stage_gui_test.cpp  stage_test.cpp
